adjust for this branch

--- a/src/content/generals/Hestia.yaml
+++ b/src/content/generals/Hestia.yaml
@@ -14,381 +14,12 @@ general:
   level: '1'
   score_as: Mounted
   books:
-    - name: Dance of the Sacred Fire
-      buff:
-        - attribute: Attack
-          condition: leading_the_army_to_attack
-          class: Mounted
-          value:
-            number: 45
-            unit: percentage
-        - attribute: Defense
-          condition: leading_the_army_to_attack
-          class: Mounted
-          value:
-            number: 45
-            unit: percentage
-        - attribute: HP
-          condition: brings_dragon_or_beast_to_attack
-          class: Mounted
-          value:
-            number: 40
-            unit: percentage
-        - attribute: HP
-          condition: brings_dragon_or_beast_to_attack
-          class: Ground
-          value:
-            number: 40
-            unit: percentage
+    - Dance of the Sacred Fire
   specialities:
-    - name: Mounted Troop Formation
-      attribute:
-        - level: Green
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-        - level: Blue
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-        - level: Purple
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-        - level: Orange
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-        - level: Gold
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 4
-                unit: percentage
-            - attribute: Defense
-              class: Mounted
-              value:
-                number: 4
-                unit: percentage
-    - name: Formation
-      attribute:
-        - level: Green
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-        - level: Blue
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-        - level: Purple
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-        - level: Orange
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-        - level: Gold
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 4
-                unit: percentage
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 4
-                unit: percentage
-    - name: Mounted Troop Ares
-      attribute:
-        - level: Green
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-            - attribute: HP
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-        - level: Blue
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-            - attribute: HP
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Mounted
-              value:
-                number: 1
-                unit: percentage
-        - level: Purple
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-            - attribute: HP
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-        - level: Orange
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-            - attribute: HP
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Mounted
-              value:
-                number: 2
-                unit: percentage
-        - level: Gold
-          buff:
-            - attribute: Attack
-              class: Mounted
-              value:
-                number: 4
-                unit: percentage
-            - attribute: HP
-              class: Mounted
-              value:
-                number: 4
-                unit: percentage
-            - attribute: Defense
-              class: Mounted
-              value:
-                number: 4
-                unit: percentage
-    - name: Warm Shelter
-      attribute:
-        - level: 'Green'
-          buff:
-          - attribute: Attack
-            class: Mounted
-            value:
-              number: 5
-              unit: percentage
-          - attribute: Defense
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Defense
-            class: Mounted
-            value:
-              number: 2
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-          - attribute: HP
-            class: Mounted
-            value:
-              number: 2
-              unit: percentage
-        - level: 'Blue'
-          buff:
-          - attribute: Attack
-            class: Mounted
-            value:
-              number: 5
-              unit: percentage
-          - attribute: Defense
-            class: Ground
-            value:
-              number: 3
-              unit: percentage
-          - attribute: Defense
-            class: Mounted
-            value:
-              number: 3
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 3
-              unit: percentage
-          - attribute: HP
-            class: Mounted
-            value:
-              number: 3
-              unit: percentage
-        - level: 'Purple'
-          buff:
-          - attribute: Attack
-            class: Mounted
-            value:
-              number: 10
-              unit: percentage
-          - attribute: Defense
-            class: Ground
-            value:
-              number: 5
-              unit: percentage
-          - attribute: Defense
-            class: Mounted
-            value:
-              number: 5
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 5
-              unit: percentage
-          - attribute: HP
-            class: Mounted
-            value:
-              number: 5
-              unit: percentage
-        - level: 'Orange'
-          buff:
-          - attribute: Attack
-            class: Mounted
-            value:
-              number: 10
-              unit: percentage
-          - attribute: Defense
-            class: Ground
-            value:
-              number: 5
-              unit: percentage
-          - attribute: Defense
-            class: Mounted
-            value:
-              number: 5
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 5
-              unit: percentage
-          - attribute: HP
-            class: Mounted
-            value:
-              number: 5
-              unit: percentage
-        - level: 'Gold'
-          buff:
-          - attribute: Attack
-            class: Mounted
-            value:
-              number: 20
-              unit: percentage
-          - attribute: Defense
-            class: Ground
-            value:
-              number: 10
-              unit: percentage
-          - attribute: Defense
-            class: Mounted
-            value:
-              number: 10
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 10
-              unit: percentage
-          - attribute: HP
-            class: Mounted
-            value:
-              number: 10
-              unit: percentage
+    - Mounted Troop Formation
+    - Formation
+    - Mounted Troop Ares
+    - Warm Shelter
   ascending:
         - level: '6'
           buff:
