--- a/src/content/generalConflictData/ra1.yml
+++ b/src/content/generalConflictData/ra1.yml
@@ -1,18 +1,19 @@
 conflicts:
   01HES90861A1V9J8PHZE9KA32N:
-    - Marcus Agrippa
+    - Alfred the Great
+    - Charles XII
     - Douglas
     - Douglas (Odyssey)
-    - Charles XII
-    - James Conrad
-    - Princess Kaguya
-    - Tomyris
-    - Wallenstein
-    - Alfred the Great
-    - Thutmose III
     - Gnarr
+    - James Conrad
+    - Maarten Tromp
+    - Marcus Agrippa
     - Mehmed II
     - Mihai
+    - Princess Kaguya
+    - Thutmose III
+    - Tomyris
+    - Wallenstein
   other:
     - Simeon the Great
     - Marcus Agrippa  
