--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "baseUrl": ".",
-    "module": "es2022",
+    "module": "esnext",
     "moduleResolution": "bundler",
     "jsx": "preserve",
     "resolveJsonModule": true,
