I was having too much trouble with conflicts as records, this allows them to be objects

--- a/src/content/generalConflictData/20231026-1.yml
+++ b/src/content/generalConflictData/20231026-1.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HXJ2PVV0BG123FRJ13G4XHWW:
-    - Scipio Africanus
-  other:
+name: 01HXJ2PVV0BG123FRJ13G4XHWW
+members: 
+  - Scipio Africanus
+others:
     - Ludwig
     - Aurelian
     - Elise
