--- a/src/content/generalConflictData/20231026-16.yml
+++ b/src/content/generalConflictData/20231026-16.yml
@@ -1,8 +1,8 @@
-conflicts:
-  01HGKYRFW61Z5E7JMSWKBCZHND:
+name: 01HGKYRFW61Z5E7JMSWKBCZHND
+members:
     - Honda Tadakatsu
     - Khalid
-  other:
+others:
     - Laudon
     - Prince Eugene
     - Martinus
