--- a/src/content/generalConflictData/20231026-17.yml
+++ b/src/content/generalConflictData/20231026-17.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HGKYRGB0RE1FQRQY3NFEZCJP:
+name: 01HGKYRGB0RE1FQRQY3NFEZCJP
+members: 
     - Ulysses S. Grant
-  other:
+others:
     - Isabella I
