--- a/src/content/generalConflictData/20231026-18.yml
+++ b/src/content/generalConflictData/20231026-18.yml
@@ -1,6 +1,6 @@
-conflicts:
-  01HGKYRGVZTNKN96RZMXZ2QE2G:
+name: 01HGKYRGVZTNKN96RZMXZ2QE2G
+members: 
     - Isabella I
-  other:
+others:
     - Ulysses S. Grant
 
