--- a/src/content/generalConflictData/20231026-2.yml
+++ b/src/content/generalConflictData/20231026-2.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HGKZ5P8Z07P9EGPFYX009X1S:
+name: 01HGKZ5P8Z07P9EGPFYX009X1S
+members: 
     - Takeda Shingen
-  other:
+others:
     - Robert the Bruce
