--- a/src/content/generalConflictData/20231026-23.yml
+++ b/src/content/generalConflictData/20231026-23.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HGKYRJVY8JXVQNHCTGA5HYMD:
+name: 01HGKYRJVY8JXVQNHCTGA5HYMD
+members: 
     - Yue Fei
-  other:
+others:
     - Ludwig
     - Aurelian
     - Elise
