--- a/src/content/generalConflictData/20231026-27.yml
+++ b/src/content/generalConflictData/20231026-27.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HGKYRMPGCPRWNKYSXNFTGY8S:
+name: 01HGKYRMPGCPRWNKYSXNFTGY8S
+members: 
     - Prince Rhaeger
-  other:
+others:
     - El Cid
