--- a/src/content/generalConflictData/20231026-3.yml
+++ b/src/content/generalConflictData/20231026-3.yml
@@ -1,6 +1,6 @@
-conflicts:
-  01HGKYRAZXG642438CEVAFFXR1:
+name: 01HGKYRAZXG642438CEVAFFXR1
+members: 
     - Alessandra
-  other:
+others:
     - Genghis Khan
     - King Arthur
