--- a/src/content/generalConflictData/20231026-30.yml
+++ b/src/content/generalConflictData/20231026-30.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HGKYRP37ZXE72P5TVFHABJ64:
+name: 01HGKYRP37ZXE72P5TVFHABJ64
+members:
     - Turenne
     - Soult
     - Epaminondas
