--- a/src/content/generalConflictData/20231026-32.yml
+++ b/src/content/generalConflictData/20231026-32.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HGKYRQ0TTS9252KR7EK09G7X:
+name: 01HGKYRQ0TTS9252KR7EK09G7X
+members:
     - Robert the Bruce
-  other:
+others:
     - Trajan
     - Takeda Shingen
 
