--- a/src/content/generalConflictData/20231026-34.yml
+++ b/src/content/generalConflictData/20231026-34.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HGKZ0X26G9DQRYBZ7M7FZAHN:
+name: 01HGKZ0X26G9DQRYBZ7M7FZAHN
+members: 
     - Pyrrhus
-  other:
+others:
     - Trajan
