--- a/src/content/generalConflictData/20231101-0.yml
+++ b/src/content/generalConflictData/20231101-0.yml
@@ -1,5 +1,5 @@
-conflicts: 
-  01HE6YMFEH9D6ZR7YSPB1HV987:
+name: 01HE6YMFEH9D6ZR7YSPB1HV987
+members:
     - Turenne
     - Soult
     - Epaminondas
