--- a/src/content/generalConflictData/20231208-3.yml
+++ b/src/content/generalConflictData/20231208-3.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HH6A69JXY9FCDB0GXGR09B8Z:
+name: 01HH6A69JXY9FCDB0GXGR09B8Z
+members: 
     - Bertrand du Guesclin
-  other:
+others:
     - Napoleon Prime
