--- a/src/content/generalConflictData/20231208-4.yml
+++ b/src/content/generalConflictData/20231208-4.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HH6A7RZ9QMS40ZZMAY2TRHHX:
+name: 01HH6A7RZ9QMS40ZZMAY2TRHHX
+members: 
     - Hannibal
-  other:
+others:
     - Napoleon Prime
