--- a/src/content/generalConflictData/20231208-5.yml
+++ b/src/content/generalConflictData/20231208-5.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HH6A8QQGP2BMS6QP9K5MT8HH:
+name: 01HH6A8QQGP2BMS6QP9K5MT8HH
+members:
     - Mordred
-  other:
+others:
     - Napoleon Prime
