--- a/src/content/generalConflictData/20231230-1.yml
+++ b/src/content/generalConflictData/20231230-1.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HJWP9N003Z59GS19KQD749SN:
+name: 01HJWP9N003Z59GS19KQD749SN
+members:
     - Marcus Agrippa
-  other:
+others:
     - Douglas
     - Douglas (Odyssey)
     - Charles XII
