--- a/src/content/generalConflictData/gr2b.yml
+++ b/src/content/generalConflictData/gr2b.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HFAN3HSN2AG8B30Q40VQQEK2:
+name: 01HFAN3HSN2AG8B30Q40VQQEK2
+members:
     - El Cid
-  other:
+others:
     - Basil II
     - Hannibal
     - Yue Fei
