--- a/src/content/generalConflictData/gr4.yml
+++ b/src/content/generalConflictData/gr4.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HGMDRGS3DCNQVMEHVN9GFG2P:
+name: 01HGMDRGS3DCNQVMEHVN9GFG2P
+members:
     - Trajan
-  other:
+others:
     - Robert the Bruce
     - Pyrrhus
     - Freyja
