--- a/src/content/generalConflictData/gr5a.yml
+++ b/src/content/generalConflictData/gr5a.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HP349Y2SBSFWNBE3NQSJQS25:
+name: 01HP349Y2SBSFWNBE3NQSJQS25
+members:
     - Takeda Shingen
-  other:
+others:
     - Robert the Bruce
