--- a/src/content/generalConflictData/mt2c.yml
+++ b/src/content/generalConflictData/mt2c.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HGKYRDYR04WCDTHSY73QEBTQ:
+name: 01HGKYRDYR04WCDTHSY73QEBTQ
+members:
     - Basil II
-  other:
+others:
     - Hannibal
     - Mordred
     - El Cid
