--- a/src/content/generalConflictData/mt2d.yml
+++ b/src/content/generalConflictData/mt2d.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HGKYREE8MCE5JWPAG4R2VX94:
+name: 01HGKYREE8MCE5JWPAG4R2VX94
+members:
     - Poligenus
-  other:
+others:
     - Napoleon Prime
     - Roland
     - Zhao Yun
