--- a/src/content/generalConflictData/mt3a.yml
+++ b/src/content/generalConflictData/mt3a.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HGKYRFD3XP10X55VSXMBNPMB:
+name: 01HGKYRFD3XP10X55VSXMBNPMB
+members:
     - Ii Naomasa
-  other:
+others:
     - Laudon
     - Prince Eugene
     - Martinus
