--- a/src/content/generalConflictData/ra1a.yml
+++ b/src/content/generalConflictData/ra1a.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HES949ATG9BJQDA0K73VN88T: 
+name: 01HES949ATG9BJQDA0K73VN88T
+members:
     - Simeon the Great
-  other:
+others:
     - Marcus Agrippa
     - Douglas
     - Douglas (Odyssey)
