--- a/src/content/generalConflictData/ra2a.yml
+++ b/src/content/generalConflictData/ra2a.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HKVDKZTWXMEVWN2TEGJ5B3KE:
+name: 01HKVDKZTWXMEVWN2TEGJ5B3KE
+members:
     - Winfield Scott
-  other:
+others:
     - Elektra
     - Elektra (Dragon God)
     - Vladimir the Great
