--- a/src/content/generalConflictData/ra3a.yml
+++ b/src/content/generalConflictData/ra3a.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HJV8VNDFA3HQ8TTPA0J8ZDA4:
+name: 01HJV8VNDFA3HQ8TTPA0J8ZDA4
+members:
     - Edward the Black Prince
-  other:
+others:
     - Antara
     - Elektra
     - Elektra (Dragon God)
