--- a/src/content/generalConflictData/ra3b.yml
+++ b/src/content/generalConflictData/ra3b.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HY61QCTFDT8VCY748BWEPZWM:
+name: 01HY61QCTFDT8VCY748BWEPZWM
+members:
     - Louis IX
-  other:
+others:
     - Antara
     - Edward III
     - Edward the Black Prince
