--- a/src/content/generalConflictData/ra4.yml
+++ b/src/content/generalConflictData/ra4.yml
@@ -1,9 +1,9 @@
-conflicts:
-  01HJV95ERVWRSAHGYZE9QD5MH9: 
+name: 01HJV95ERVWRSAHGYZE9QD5MH9
+members:
     - Mason Weaver 
     - Toyotomi Hideyori
     - Elizabeth I
     - Gwanggaeto the Great
     - Gustavus Adolphus
-  other: 
+others: 
     - Edward III
