--- a/src/content/generalConflictData/ra4a.yml
+++ b/src/content/generalConflictData/ra4a.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HES9NAW7F7H96HXANGG0SNAX:
+name: 01HES9NAW7F7H96HXANGG0SNAX
+members:
     - Edward III
-  other:
+others:
     - Mason Weaver
     - Toyotomi Hideyori
     - Elizabeth I
