--- a/src/content/generalConflictData/ra7.yml
+++ b/src/content/generalConflictData/ra7.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HES9RYB0QPCVF1ZGNB43KNFT:
+name: 01HES9RYB0QPCVF1ZGNB43KNFT
+members:
     - Eleanor
-  other:
+others:
     - Li Shimin
     - King Arthur
     - Genghis Khan
