--- a/src/content/generalConflictData/sg1a.yml
+++ b/src/content/generalConflictData/sg1a.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HHE53MVKT5EQA6WHXJNAKNH3:
+name: 01HHE53MVKT5EQA6WHXJNAKNH3
+members:
     - Napoleon
-  other:
+others:
     - Zucca
     - Petronas
     - John Churchill
