--- a/src/content/generalConflictData/sg3.yml
+++ b/src/content/generalConflictData/sg3.yml
@@ -1,11 +1,11 @@
-conflicts:
-  01HHE55GYM266T9M3AN0VFSFZN:
+name: 01HHE55GYM266T9M3AN0VFSFZN
+members:
     - Mu Guiying
     - Raimondo
     - Raimondo (Odyssey)
     - Surena
     - Emperor Qin Shihuang
-  other:
+others:
     - Septimius Serverus
     - William Wallace
     - Khalid
