--- a/src/content/generalConflictData/sg3a.yml
+++ b/src/content/generalConflictData/sg3a.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HGKZ108TB88BJG9YKKGJDJWF:
+name: 01HGKZ108TB88BJG9YKKGJDJWF
+members:
     - Septimius Severus
-  other:
+others:
     - Surena
     - Raimondo
     - Raimondo (Odyssey)
