--- a/src/content/generalConflictData/sg3b.yml
+++ b/src/content/generalConflictData/sg3b.yml
@@ -1,8 +1,8 @@
-conflicts:
-  01HPAJVBGBGTR4JB8R728YHACN:
+name: 01HPAJVBGBGTR4JB8R728YHACN
+members:
     - William Wallace
     - Khalid
-  other:
+others:
     - Raimondo
     - Raimondo (Odyssey)
     - Surena
