--- a/src/content/generalConflictData/sg4.yml
+++ b/src/content/generalConflictData/sg4.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HPAKR6A1YQ3RKXRZF29SRXDQ:
+name: 01HPAKR6A1YQ3RKXRZF29SRXDQ
+members:
     - Ulysses S. Grant
-  other:
+others:
     - Isabella I
