--- a/src/content/generalConflictData/sg5.yml
+++ b/src/content/generalConflictData/sg5.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HPAK3MANZXT0FYCM9BV81YPZ:
+name: 01HPAK3MANZXT0FYCM9BV81YPZ
+members:
     - Matthias I
-  other:
+others:
     - John Hunyadi
     - Genghis Khan
     - King Arthur
