--- a/src/content/generalConflictData/sg6.yml
+++ b/src/content/generalConflictData/sg6.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HPAK9QBWJFRSZ69P35D74J1M:
+name: 01HPAK9QBWJFRSZ69P35D74J1M
+members:
     - Ramesses II
-  other:
+others:
     - Edward Teach
