--- a/src/content/generalConflictData/20231026-0.yml
+++ b/src/content/generalConflictData/20231026-0.yml
@@ -1,11 +1,11 @@
-conflicts:
-  01HXJ2QWHN6CG0MHMY9Z1KRPD5:
-    - Ludwig
-    - Aurelian
-    - Elise
-    - Maeda Toshiie
-    - Guan Yu
-    - Alexander the Great
-    - Carus
-  other:
-    - Scipio Africanus
+name: 01HXJ2QWHN6CG0MHMY9Z1KRPD5
+members:
+  - Ludwig
+  - Aurelian
+  - Elise
+  - Maeda Toshiie
+  - Guan Yu
+  - Alexander the Great
+  - Carus
+others:
+  - Scipio Africanus
