--- a/src/content/generalConflictData/20231026-31.yml
+++ b/src/content/generalConflictData/20231026-31.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HGKYRPHVY4789WQBF2MN9HY3:
+name: 01HGKYRPHVY4789WQBF2MN9HY3
+members:
     - Trajan
-  other:
+others:
     - Robert the Bruce
     - Pyrrhus
 
