--- a/src/content/generalConflictData/20231026-33.yml
+++ b/src/content/generalConflictData/20231026-33.yml
@@ -1,8 +1,8 @@
-conflicts:
-  01HGKZ0WKJGWZM4TC1HYDQNYXF:
+name: 01HGKZ0WKJGWZM4TC1HYDQNYXF
+members: 
     - Peter the Great
     - Miyamoto Musashi
-  other:
+others:
     - Trajan
     - Robert the Bruce
 
