--- a/src/content/generalConflictData/gr1.yml
+++ b/src/content/generalConflictData/gr1.yml
@@ -1,11 +1,11 @@
-conflicts:
-  01HFAMT643M2WZ2YD9RRQ7YCVH:
+name: 01HFAMT643M2WZ2YD9RRQ7YCVH
+members:
     - Lu Xun
     - Ludwig
     - Alexander the Great
     - Scipio Africanus
     - Carus
-  other: 
+others: 
     - Aurelian
     - Elise
     - Maeda Toshiie
