--- a/src/content/generalConflictData/mt11a.yml
+++ b/src/content/generalConflictData/mt11a.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HGKYRM7NSSF1WYJZMA52BV90:
+name: 01HGKYRM7NSSF1WYJZMA52BV90
+members:
     - Theodora
-  other:
+others:
     - Biabars
     - Cleopatra
 books:
