--- a/src/content/generalConflictData/ra1.yml
+++ b/src/content/generalConflictData/ra1.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HES90861A1V9J8PHZE9KA32N:
+name: 01HES90861A1V9J8PHZE9KA32N
+members:
     - Alfred the Great
     - Charles XII
     - Douglas
@@ -14,7 +14,7 @@ conflicts:
     - Thutmose III
     - Tomyris
     - Wallenstein
-  other:
+others:
     - Simeon the Great
     - Marcus Agrippa  
     - Gunther  
