--- a/src/content/generalConflictData/ra2b.yml
+++ b/src/content/generalConflictData/ra2b.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HKVDRS2MHZSAX58NQCZTTKEP:
+name: 01HKVDRS2MHZSAX58NQCZTTKEP
+members:
     - Li Shimin
-  other:
+others:
     - Elektra
     - Elektra (Dragon God)
     - Vladimir the Great
