--- a/src/content/generalConflictData/sg1.yml
+++ b/src/content/generalConflictData/sg1.yml
@@ -1,11 +1,11 @@
-conflicts:
-  01HHE530TWDFPH3BNXZ35JFX37:
+name: 01HHE530TWDFPH3BNXZ35JFX37
+members:
     - Zucca
     - Petronas
     - John Churchill
     - Philip II
     - Alfred the Great
-  other:
+others:
     - Napoleon
     - Kleos
     - Gunther
