--- a/src/content/generalConflictData/sg2a.yml
+++ b/src/content/generalConflictData/sg2a.yml
@@ -1,7 +1,7 @@
-conflicts:
-  01HHE54WY2R6QM4JFS594TKZN3:
+name: 01HHE54WY2R6QM4JFS594TKZN3
+members:
     - Edward Teach
-  other:
+others:
     - Suleiman the Magnificent
     - Gustavus Adolphus
     - Gwanggaeto the Great
