--- a/src/content/generalConflictData/sg5a.yml
+++ b/src/content/generalConflictData/sg5a.yml
@@ -1,5 +1,5 @@
-conflicts:
-  01HPAK7Z1MW2J7RC0EXMB95DK2:
+name: 01HPAK7Z1MW2J7RC0EXMB95DK2
+members:
     - John Hunyadi
-  other:
+others:
     - Matthias I
