--- a/src/content/generalConflictData/sg8.yml
+++ b/src/content/generalConflictData/sg8.yml
@@ -1,4 +1,4 @@
-conflicts:
-  01HPAKC17KWBCJV5KG1FD4HAPZ:
+name: 01HPAKC17KWBCJV5KG1FD4HAPZ
+members:
     - Pallas
     - Pallas_Legend_of_Sanctuary
