--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "strict": true,
     "baseUrl": ".",
-    "module": "esnext",
+    "module": "ES2022",
     "moduleResolution": "bundler",
     "jsx": "preserve",
     "resolveJsonModule": true,
