--- a/src/content/generals/Douglas_(Odyssey).yaml
+++ b/src/content/generals/Douglas_(Odyssey).yaml
@@ -14,10 +14,10 @@ general:
   level: '1'
   score_as: Archers
   books:
-    - name: Odyssey Skin
+    - name: Odyssey - Douglas
       buff:
         - attribute: Attack
-          condition: Marching
+          condition:  Marching
           class: Archers
           value:
             number: 10
@@ -69,159 +69,159 @@ general:
   specialities:
     - name: Ranged Troop Assault
       attribute:
-        - level: 'Green'
+        - level: Green
           buff:
-          - attribute: Attack
-            class: Archers
-            value:
-              number: 1
-              unit: percentage
-          - attribute: HP
-            class: Archers
-            value:
-              number: 1
-              unit: percentage
-        - level: 'Blue'
+            - attribute: Attack
+              class: Archers
+              value:
+                number: 1
+                unit: percentage
+            - attribute: HP
+              class: Archers
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
           buff:
-          - attribute: HP
-            class: Archers
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            class: Archers
-            value:
-              number: 1
-              unit: percentage
-        - level: 'Purple'
+            - attribute: HP
+              class: Archers
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              class: Archers
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
           buff:
-          - attribute: HP
-            class: Archers
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            class: Archers
-            value:
-              number: 2
-              unit: percentage
-        - level: 'Orange'
+            - attribute: HP
+              class: Archers
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Attack
+              class: Archers
+              value:
+                number: 2
+                unit: percentage
+        - level: Orange
           buff:
-          - attribute: HP
-            class: Archers
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            class: Archers
-            value:
-              number: 2
-              unit: percentage
-        - level: 'Gold'
+            - attribute: HP
+              class: Archers
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Attack
+              class: Archers
+              value:
+                number: 2
+                unit: percentage
+        - level: Gold
           buff:
-          - attribute: HP
-            class: Archers
-            value:
-              number: 4
-              unit: percentage
-          - attribute: Attack
-            class: Archers
-            value:
-              number: 4
-              unit: percentage
+            - attribute: HP
+              class: Archers
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Attack
+              class: Archers
+              value:
+                number: 4
+                unit: percentage
     - name: Siege
       attribute:
-        - level: 'Green'
+        - level: Green
           buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Siege
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Archers
-            value:
-              number: 1
-              unit: percentage
-        - level: 'Blue'
+            - attribute: March_Size_Capacity
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              condition: Attacking
+              class: Siege
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              condition: Attacking
+              class: Archers
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
           buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Siege
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Archers
-            value:
-              number: 1
-              unit: percentage
-        - level: 'Purple'
+            - attribute: March_Size_Capacity
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              condition: Attacking
+              class: Siege
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              condition: Attacking
+              class: Archers
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
           buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Siege
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Archers
-            value:
-              number: 2
-              unit: percentage
-        - level: 'Orange'
+            - attribute: March_Size_Capacity
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              condition: Attacking
+              class: Siege
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Attack
+              condition: Attacking
+              class: Archers
+              value:
+                number: 2
+                unit: percentage
+        - level: Orange
           buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Siege
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Archers
-            value:
-              number: 2
-              unit: percentage
-        - level: 'Gold'
+            - attribute: March_Size_Capacity
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              condition: Attacking
+              class: Siege
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Attack
+              condition: Attacking
+              class: Archers
+              value:
+                number: 2
+                unit: percentage
+        - level: Gold
           buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Siege
-            value:
-              number: 4
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Archers
-            value:
-              number: 4
-              unit: percentage
-    - name: Ranged Troop Assault
+            - attribute: March_Size_Capacity
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Attack
+              condition: Attacking
+              class: Siege
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Attack
+              condition: Attacking
+              class: Archers
+              value:
+                number: 4
+                unit: percentage
+    - name: War God
       attribute:
         - level: 'Green'
           buff:
@@ -253,9 +253,9 @@ general:
             value:
               number: 2
               unit: percentage
-    - name: Ranged Troop Assault
+    - name: Old Knight
       attribute:
-        - level: 'Green'
+        - level: Green
           buff:
           - attribute: Attack
             condition: Marching
@@ -275,7 +275,7 @@ general:
             value:
               number: 4
               unit: percentage
-        - level: 'Blue'
+        - level: Blue
           buff:
           - attribute: Attack
             condition: Marching
@@ -295,7 +295,7 @@ general:
             value:
               number: 4
               unit: percentage
-        - level: 'Purple'
+        - level: Purple
           buff:
           - attribute: Attack
             condition: Marching
@@ -315,7 +315,7 @@ general:
             value:
               number: 8
               unit: percentage
-        - level: 'Orange'
+        - level: Orange
           buff:
           - attribute: Attack
             condition: Marching
@@ -335,7 +335,7 @@ general:
             value:
               number: 8
               unit: percentage
-        - level: 'Gold'
+        - level: Gold
           buff:
           - attribute: Attack
             condition: Marching
@@ -356,89 +356,89 @@ general:
               number: 16
               unit: percentage
   ascending:
-        - level: '6'
-          buff:
-          - attribute: Attack
-            condition: Marching
-            class: Archers
-            value:
-              number: 5
-              unit: percentage
-          - attribute: Defense
-            condition: Marching
-            class: Archers
-            value:
-              number: 10
-              unit: percentage
-          - attribute: HP
-            condition: Marching
-            class: Archers
-            value:
-              number: 10
-              unit: percentage
-          - attribute: Defense
-            condition: Marching
-            class: Siege
-            value:
-              number: 10
-              unit: percentage
-          - attribute: HP
-            condition: Marching
-            class: Siege
-            value:
-              number: 10
-              unit: percentage
-        - level: '7'
-          buff:
-          - attribute: Wounded_to_Death
-            condition: Enemy_In_City
-            value:
-              number: 10
-              unit: percentage
-        - level: '8'
-          buff:
-          - attribute: Attack
-            condition: Attacking
-            class: Archers
-            value:
-              number: 10
-              unit: percentage
-          - attribute: March_Size_Capacity
-            condition: Attacking
-            value:
-              number: 10
-              unit: percentage
-        - level: '9'
-          buff:
-          - attribute: Defense
-            condition: Marching
-            class: Archers
-            value:
-              number: 30
-              unit: percentage
-          - attribute: HP
-            condition: Marching
-            class: Archers
-            value:
-              number: 40
-              unit: percentage
-        - level: '10'
-          buff:
-          - attribute: Attack
-            condition: Marching
-            class: Archers
-            value:
-              number: 30
-              unit: percentage
-          - attribute: Defense
-            condition: Marching
-            class: Archers
-            value:
-              number: 15
-              unit: percentage
-          - attribute: HP
-            condition: Marching
-            class: Archers
-            value:
-              number: 15
-              unit: percentage
+    - level: '6'
+      buff:
+        - attribute: Attack
+          condition: Marching
+          class: Archers
+          value:
+            number: 5
+            unit: percentage
+        - attribute: Defense
+          condition: Marching
+          class: Archers
+          value:
+            number: 10
+            unit: percentage
+        - attribute: HP
+          condition: Marching
+          class: Archers
+          value:
+            number: 10
+            unit: percentage
+        - attribute: Defense
+          condition: Marching
+          class: Siege
+          value:
+            number: 10
+            unit: percentage
+        - attribute: HP
+          condition: Marching
+          class: Siege
+          value:
+            number: 10
+            unit: percentage
+    - level: '7'
+      buff:
+        - attribute: Wounded_to_Death
+          condition: Enemy_In_City
+          value:
+            number: 10
+            unit: percentage
+    - level: '8'
+      buff:
+        - attribute: Attack
+          condition: Attacking
+          class: Archers
+          value:
+            number: 10
+            unit: percentage
+        - attribute: March_Size_Capacity
+          condition: Attacking
+          value:
+            number: 10
+            unit: percentage
+    - level: '9'
+      buff:
+        - attribute: Defense
+          condition: Marching
+          class: Archers
+          value:
+            number: 30
+            unit: percentage
+        - attribute: HP
+          condition: Marching
+          class: Archers
+          value:
+            number: 40
+            unit: percentage
+    - level: '10'
+      buff:
+        - attribute: Attack
+          condition: Marching
+          class: Archers
+          value:
+            number: 30
+            unit: percentage
+        - attribute: Defense
+          condition: Marching
+          class: Archers
+          value:
+            number: 15
+            unit: percentage
+        - attribute: HP
+          condition: Marching
+          class: Archers
+          value:
+            number: 15
+            unit: percentage
