--- a/src/content/generals/Merlin.yaml
+++ b/src/content/generals/Merlin.yaml
@@ -14,25 +14,400 @@ general:
   level: '1'
   score_as: Archers
   books:
-  - Weaving the Fate
+  - name: Weaving the Fate
+    buff:
+      - attribute: Attack
+        condition: leading_the_army_to_attack
+        class: Archers
+        value:
+          number: 45
+          unit: percentage
+      - attribute: HP
+        condition: leading_the_army_to_attack
+        class: Archers
+        value:
+          number: 45
+          unit: percentage
+      - attribute: Defense
+        condition: leading_the_army_to_attack
+        class: Archers
+        value:
+          number: 30
+          unit: percentage
+      - attribute: Defense
+        condition: leading_the_army_to_attack
+        class: Siege
+        value:
+          number: 30
+          unit: percentage
   specialities:
-  - Ranged Troop Formation
-  - Bash
-  - Ranged Troop Ares
-  - Light of Wisdom
+  - name: Ranged Machine Formation
+    attribute:
+      - level: Green
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+          - attribute: Defense
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+      - level: Blue
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+          - attribute: Defense
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+      - level: Purple
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+          - attribute: Defense
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+      - level: Orange
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+          - attribute: Defense
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+      - level: Gold
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 4
+              unit: percentage
+          - attribute: Defense
+            class: Archers
+            value:
+              number: 4
+              unit: percentage
+  - name: Bash
+    attribute:
+      - level: Green
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+          - attribute: Attack
+            class: Siege
+            value:
+              number: 1
+              unit: percentage
+      - level: Blue
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+          - attribute: Attack
+            class: Siege
+            value:
+              number: 1
+              unit: percentage
+      - level: Purple
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+          - attribute: Attack
+            class: Siege
+            value:
+              number: 2
+              unit: percentage
+      - level: Orange
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+          - attribute: Attack
+            class: Siege
+            value:
+              number: 2
+              unit: percentage
+      - level: Gold
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 4
+              unit: percentage
+          - attribute: Attack
+            class: Siege
+            value:
+              number: 4
+              unit: percentage
+  - name: Ranged Troop Ares
+    attribute:
+      - level: 'Green'
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+          - attribute: Defense
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+          - attribute: HP
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+      - level: 'Blue'
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+          - attribute: Defense
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+          - attribute: HP
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+      - level: 'Purple'
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+          - attribute: Defense
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+          - attribute: HP
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+      - level: 'Orange'
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+          - attribute: Defense
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+          - attribute: HP
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+      - level: 'Gold'
+        buff:
+          - attribute: Attack
+            class: Archers
+            value:
+              number: 4
+              unit: percentage
+          - attribute: Defense
+            class: Archers
+            value:
+              number: 4
+              unit: percentage
+          - attribute: HP
+            class: Archers
+            value:
+              number: 4
+              unit: percentage
+  - name: Light of Wisdom
+    attribute:
+      - level: 'Green'
+        buff:
+          - attribute: Attack
+            condition:
+              - Marching
+            class: Archers
+            value:
+              number: 4
+              unit: percentage
+          - attribute: Defense
+            condition:
+              - Marching
+            class: Archers
+            value:
+              number: 3
+              unit: percentage
+          - attribute: HP
+            condition:
+              - Attacking
+            class: Archers
+            value:
+              number: 1
+              unit: percentage
+          - attribute: HP
+            condition:
+              - Attacking
+            class: Siege
+            value:
+              number: 1
+              unit: percentage
+      - level: 'Blue'
+        buff:
+          - attribute: Attack
+            condition:
+              - Marching
+            class: Archers
+            value:
+              number: 4
+              unit: percentage
+          - attribute: Defense
+            condition:
+              - Marching
+            class: Archers
+            value:
+              number: 3
+              unit: percentage
+          - attribute: HP
+            condition:
+              - Attacking
+            class: Archers
+            value:
+              number: 2
+              unit: percentage
+          - attribute: HP
+            condition:
+              - Attacking
+            class: Siege
+            value:
+              number: 2
+              unit: percentage
+      - level: 'Purple'
+        buff:
+          - attribute: Attack
+            condition:
+              - Marching
+            class: Archers
+            value:
+              number: 8
+              unit: percentage
+          - attribute: Defense
+            condition:
+              - Marching
+            class: Archers
+            value:
+              number: 6
+              unit: percentage
+          - attribute: HP
+            condition:
+              - Attacking
+            class: Archers
+            value:
+              number: 3
+              unit: percentage
+          - attribute: HP
+            condition:
+              - Attacking
+            class: Siege
+            value:
+              number: 3
+              unit: percentage
+      - level: 'Orange'
+        buff:
+          - attribute: Attack
+            condition: Marching
+            class: Archers
+            value:
+              number: 8
+              unit: percentage
+          - attribute: Defense
+            condition: Marching
+            class: Archers
+            value:
+              number: 6
+              unit: percentage
+          - attribute: HP
+            condition: Attacking
+            class: Archers
+            value:
+              number: 3
+              unit: percentage
+          - attribute: HP
+            condition: Attacking
+            class: Siege
+            value:
+              number: 3
+              unit: percentage
+      - level: 'Gold'
+        buff:
+          - attribute: Attack
+            condition: Marching
+            class: Archers
+            value:
+              number: 16
+              unit: percentage
+          - attribute: Defense
+            condition: Marching
+            class: Archers
+            value:
+              number: 12
+              unit: percentage
+          - attribute: HP
+            condition: Attacking
+            class: Archers
+            value:
+              number: 6
+              unit: percentage
+          - attribute: HP
+            condition: Attacking
+            class: Siege
+            value:
+              number: 6
+              unit: percentage
+
   ascending:
   - level: '6'
     buff:
     - attribute: Attack
-      condition:
-      - Marching
+      condition: Marching
       class: Archers
       value:
         number: 25
         unit: percentage
     - attribute: Defense
-      condition:
-      - Marching
+      condition: Marching
       class: Archers
       value:
         number: 10
@@ -40,30 +415,26 @@ general:
   - level: '7'
     buff:
     - attribute: Death_to_Wounded
-      condition:
-      - Marching
+      condition: Marching
       value:
         number: 8
         unit: percentage
   - level: '8'
     buff:
     - attribute: Attack
-      condition:
-      - Marching
+      condition: Marching
       class: Archers
       value:
         number: 15
         unit: percentage
     - attribute: Defense
-      condition:
-      - Marching
+      condition: Marching
       class: Archers
       value:
         number: 15
         unit: percentage
     - attribute: HP
-      condition:
-      - Marching
+      condition: Marching
       class: Archers
       value:
         number: 15
@@ -71,29 +442,25 @@ general:
   - level: '9'
     buff:
     - attribute: Defense
-      condition:
-      - Marching
+      condition: Marching
       class: Archers
       value:
         number: 15
         unit: percentage
     - attribute: Defense
-      condition:
-      - Marching
+      condition: Marching
       class: Siege
       value:
         number: 15
         unit: percentage
     - attribute: HP
-      condition:
-      - Marching
+      condition: Marching
       class: Archers
       value:
         number: 15
         unit: percentage
     - attribute: HP
-      condition:
-      - Marching
+      condition: Marching
       class: Siege
       value:
         number: 15
@@ -101,22 +468,19 @@ general:
   - level: '10'
     buff:
     - attribute: Attack
-      condition:
-      - Marching
+      condition: Marching
       class: Archers
       value:
         number: 20
         unit: percentage
     - attribute: Defense
-      condition:
-      - Marching
+      condition: Marching
       class: Archers
       value:
         number: 20
         unit: percentage
     - attribute: HP
-      condition:
-      - Marching
+      condition: Marching
       class: Archers
       value:
         number: 20
