--- a/src/content/generals/Douglas.yaml
+++ b/src/content/generals/Douglas.yaml
@@ -11,112 +11,112 @@ general:
   politics: 102
   politics_increment: 8.59
   stars: '10'
-  level: '1'
+  level: '45'
   score_as: Archers
   books:
     - Blessing of Siren
   specialities:
-    - Ranged Troop Assault
-    - Siege
-    - Ranged Troop Assault
-    - Ranged Troop Assault
+  - Ranged Troop Assault
+  - Siege
+  - War God
+  - Old Knight
   ascending:
-    - level: '6'
-      buff:
-        - attribute: Attack
-          condition:
-            - Marching
-          class: Archers
-          value:
-            number: 5
-            unit: percentage
-        - attribute: Defense
-          condition:
-            - Marching
-          class: Archers
-          value:
-            number: 10
-            unit: percentage
-        - attribute: HP
-          condition:
-            - Marching
-          class: Archers
-          value:
-            number: 10
-            unit: percentage
-        - attribute: Defense
-          condition:
-            - Marching
-          class: Siege
-          value:
-            number: 10
-            unit: percentage
-        - attribute: HP
-          condition:
-            - Marching
-          class: Siege
-          value:
-            number: 10
-            unit: percentage
-    - level: '7'
-      buff:
-        - attribute: Wounded_to_Death
-          condition:
-            - Enemy_In_City
-          value:
-            number: 10
-            unit: percentage
-    - level: '8'
-      buff:
-        - attribute: Attack
-          condition:
-            - Attacking
-          class: Archers
-          value:
-            number: 10
-            unit: percentage
-        - attribute: March_Size_Capacity
-          condition:
-            - Attacking
-          value:
-            number: 10
-            unit: percentage
-    - level: '9'
-      buff:
-        - attribute: Defense
-          condition:
-            - Marching
-          class: Archers
-          value:
-            number: 30
-            unit: percentage
-        - attribute: HP
-          condition:
-            - Marching
-          class: Archers
-          value:
-            number: 40
-            unit: percentage
-    - level: '10'
-      buff:
-        - attribute: Attack
-          condition:
-            - Marching
-          class: Archers
-          value:
-            number: 30
-            unit: percentage
-        - attribute: Defense
-          condition:
-            - Marching
-          class: Archers
-          value:
-            number: 15
-            unit: percentage
-        - attribute: HP
-          condition:
-            - Marching
-          class: Archers
-          value:
-            number: 15
-            unit: percentage
+  - level: '6'
+    buff:
+    - attribute: Attack
+      condition:
+      - Marching
+      class: Archers
+      value:
+        number: 5
+        unit: percentage
+    - attribute: Defense
+      condition:
+      - Marching
+      class: Archers
+      value:
+        number: 10
+        unit: percentage
+    - attribute: HP
+      condition:
+      - Marching
+      class: Archers
+      value:
+        number: 10
+        unit: percentage
+    - attribute: Defense
+      condition:
+      - Marching
+      class: Siege
+      value:
+        number: 10
+        unit: percentage
+    - attribute: HP
+      condition:
+      - Marching
+      class: Siege
+      value:
+        number: 10
+        unit: percentage
+  - level: '7'
+    buff:
+    - attribute: Wounded_to_Death
+      condition:
+      - Enemy_In_City
+      value:
+        number: 10
+        unit: percentage
+  - level: '8'
+    buff:
+    - attribute: Attack
+      condition:
+      - Attacking
+      class: Archers
+      value:
+        number: 10
+        unit: percentage
+    - attribute: March_Size_Capacity
+      condition:
+      - Attacking
+      value:
+        number: 10
+        unit: percentage
+  - level: '9'
+    buff:
+    - attribute: Defense
+      condition:
+      - Marching
+      class: Archers
+      value:
+        number: 30
+        unit: percentage
+    - attribute: HP
+      condition:
+      - Marching
+      class: Archers
+      value:
+        number: 40
+        unit: percentage
+  - level: '10'
+    buff:
+    - attribute: Attack
+      condition:
+      - Marching
+      class: Archers
+      value:
+        number: 30
+        unit: percentage
+    - attribute: Defense
+      condition:
+      - Marching
+      class: Archers
+      value:
+        number: 15
+        unit: percentage
+    - attribute: HP
+      condition:
+      - Marching
+      class: Archers
+      value:
+        number: 15
+        unit: percentage
