found two more bad entries

--- a/src/content/generals/Thutmose III.yaml
+++ b/src/content/generals/Thutmose III.yaml
@@ -18,8 +18,8 @@ general:
   specialities:
     - Ranged Troop Formation
     - Bash
-    - Ranged Troop Formation
-    - Ranged Troop Formation
+    - War God
+    - Battle of Megiddo
   ascending:
     - level: '6'
       buff:
