I eventually want others to be group names not individual names

--- a/src/content/generalConflictData/mt1.yml
+++ b/src/content/generalConflictData/mt1.yml
@@ -12,3 +12,7 @@ others:
   - Napoleon Prime
   - Roland
   - Hannibal
+  - 01HPNDQ4D8BADN1GWD6EAWRK7B
+  - 01HPNDQ4D8BADN1GWD6EAWRK7B
+  - 01HPNDW5NNX2YBJW5B8X2YA2CR
+  - 01HGKYRDEFYMQF984BMKHSND79
