--- a/src/content/generalConflictData/mt1b.yml
+++ b/src/content/generalConflictData/mt1b.yml
@@ -13,3 +13,8 @@ others:
   - Jayavarman II
   - George A. Custer
   - Barbarossa
+  - 01HNP2VSPGA7AWKN10M2ABCR3G
+  - 01HPNDFH9P4Z5KEKM3JZH78Z7T
+  - 01HPNDW5NNX2YBJW5B8X2YA2CR
+  - 01HGKYRDEFYMQF984BMKHSND79
+  - 01HGKYRDYR04WCDTHSY73QEBTQ
