--- a/src/content/generalConflictData/mt1c.yml
+++ b/src/content/generalConflictData/mt1c.yml
@@ -13,3 +13,7 @@ others:
   - Hannibal
   - Poligenus
   - Jayavarman II
+  - 01HNP2VSPGA7AWKN10M2ABCR3G
+  - 01HPNDFH9P4Z5KEKM3JZH78Z7T
+  - 01HPNDQ4D8BADN1GWD6EAWRK7B
+  - 01HGKYREE8MCE5JWPAG4R2VX94
