--- a/src/content/generalConflictData/mt2.yml
+++ b/src/content/generalConflictData/mt2.yml
@@ -7,3 +7,7 @@ others:
   - Hannibal
   - Poligenus
   - Basil II
+  - 01HGKYPY04W83DD3DJJHVWQJD4
+  - 01HGKYRDEFYMQF984BMKHSND79
+  - 01HGKYRDYR04WCDTHSY73QEBTQ
+  - 01HGKYREE8MCE5JWPAG4R2VX94
