--- a/src/content/generalConflictData/mt2a.yml
+++ b/src/content/generalConflictData/mt2a.yml
@@ -8,3 +8,7 @@ others:
   - Prince Rhaeger
   - Zhao Yun
   - Yue Fei
+  - 01HGKYRCTHPN4ANGBP7G4R3QZX
+  - 01HGKYRDEFYMQF984BMKHSND79
+  - 01HGKYREE8MCE5JWPAG4R2VX94
+  - 01J0497Z8QVG459GS746FMQHGE
