--- a/src/content/generalConflictData/mt2b.yml
+++ b/src/content/generalConflictData/mt2b.yml
@@ -15,3 +15,10 @@ others:
   - Poligenus
   - Zhao Yun
   - Yue Fei
+  - 01HNP2VSPGA7AWKN10M2ABCR3G
+  - 01HPNDFH9P4Z5KEKM3JZH78Z7T
+  - 01HPNDW5NNX2YBJW5B8X2YA2CR
+  - 01HGKYRCTHPN4ANGBP7G4R3QZX
+  - 01HGKYPY04W83DD3DJJHVWQJD4
+  - 01HGKYRDYR04WCDTHSY73QEBTQ
+  - 01HGKYREE8MCE5JWPAG4R2VX94
