more for Covenants

--- a/src/content/covenants/Napoleon Prime.yaml
+++ b/src/content/covenants/Napoleon Prime.yaml
@@ -72,7 +72,7 @@ attributes:
       number: 12
       unit: percentage
   - attribute: Attack
-    class: mounted
+    class: Mounted
     condition:
     - When_Rallying
     value:
