--- a/src/content/covenants/André Masséna.yaml
+++ b/src/content/covenants/André Masséna.yaml
@@ -78,19 +78,22 @@ attributes:
   buff:
   - attribute: Attack
     class: Ground
-    condition: When_Rallying
+    condition:
+    - When_Rallying
     value:
       number: 10
       unit: percentage
   - attribute: Attack
     class: Mounted
-    condition: When_Rallying
+    condition:
+    - When_Rallying
     value:
-      number: 50
+      number: 10
       unit: percentage
   - attribute: Attack
     class: Mounted
-    condition: When_Rallying
+    condition:
+    - When_Rallying
     value:
       number: 10
       unit: percentage
