remove an underscore

--- a/src/content/generals/Aethelflaed.yaml
+++ b/src/content/generals/Aethelflaed.yaml
@@ -40,7 +40,7 @@ general:
       buff:
         - attribute: Defense
           condition:
-            - Reduces_Monster
+            - Reduces Monster
           value:
             number: -10
             unit: percentage
@@ -54,7 +54,7 @@ general:
       buff:
         - attribute: Attack
           condition:
-            - Reduces_Monster
+            - Reduces Monster
           value:
             number: -10
             unit: percentage
