--- a/src/content/generals/Maria Theresa.yaml
+++ b/src/content/generals/Maria Theresa.yaml
@@ -34,7 +34,7 @@ general:
       buff:
         - attribute: Attack
           condition:
-            - Reduces_Monster
+            - Reduces Monster
           value:
             number: -10
             unit: percentage
